--- a/template/logining.ejs
+++ b/template/logining.ejs
@@ -8,14 +8,14 @@
         <label for="input-username" class="col-lg-2 control-label">Имя</label>
 
         <div class="col-lg-10">
-            <input name="username" value="name" type="text" class="form-control" id="input-username" placeholder="Имя">
+            <input name="username"  type="text" class="form-control" id="input-username" placeholder="Имя">
         </div>
     </div>
     <div class="form-group">
         <label for="input-password" class="col-lg-2 control-label">Пароль</label>
 
         <div class="col-lg-10">
-            <input name="password" value="pass" type="password" class="form-control" id="input-password" placeholder="Пароль">
+            <input name="password"  type="password" class="form-control" id="input-password" placeholder="Пароль">
         </div>
     </div>
     <div class="form-group">
@@ -42,8 +42,8 @@
             },
             statusCode: {
                 200: function() {
-                    form.html("Вы вошли в сайт").addClass('alert-success');
-                    window.location.href = "/work";
+                    form.html("You are enter on site").addClass('alert-success');
+                    window.location.href = "/";
                 },
                 403: function(jqXHR) {
                     var error = JSON.parse(jqXHR.responseText);
